Project_2/kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api(/|$)(.*)
            backend:
              service:
                name: qa-api
                port:
                  number: 7777
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: qa-ui
                port:
                  number: 3000
